# 42_python_piscine

./: .gitignore  LICENSE  README.md
day_00/ex00/: Hello.py
day_00/ex01/: format_ft_time.py
day_00/ex02/: find_ft_type.py  tester.py
day_00/ex03/: NULL_not_found.py  tester.py
day_00/ex04/: whatis.py
day_00/ex05/: building.py
day_00/ex06/: filterstring.py  ft_filter.py
day_00/ex07/: sos.py
day_00/ex08/: Loading.py  tester.py
day_00/ex09/: pyproject.toml  tester.py
day_00/ex09/src/ft_package/: utils.py
day_01/ex00/: give_bmi.py  tester.py
day_01/ex01/: array2D.py  tester.py
day_01/ex02/: load_image.py  tester.py
